# pandalang

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  test.panda
crates/pandalang/: Cargo.toml
crates/pandalang/src/: ast.rs  desugar.rs  eval.rs  grammar.lalrpop  lib.rs  main.rs  managed_vec.rs  parser.rs  pretty.rs  types.rs  value.rs
crates/pandalang/src/ast/: expr.rs  mod.rs  stmt.rs  types.rs
crates/pandalang/src/cli/: mod.rs
crates/pandalang/src/eval/: builtins.rs  env.rs  mod.rs
crates/pandalang/src/repl/: mod.rs
crates/pandalang/src/snapshots/: pandalang__eval__tests__evals@add.panda.snap  pandalang__eval__tests__evals@add_int.panda.snap  pandalang__eval__tests__evals@add_one.panda.snap  pandalang__eval__tests__evals@app__add.panda.snap  pandalang__eval__tests__evals@app__add_one.panda.snap  pandalang__eval__tests__evals@app__id.panda.snap  pandalang__eval__tests__evals@bin_op__add_assoc.panda.snap  pandalang__eval__tests__evals@bin_op__add_int.panda.snap  pandalang__eval__tests__evals@bin_op__add_var.panda.snap  pandalang__eval__tests__evals@bin_op__div_int.panda.snap  pandalang__eval__tests__evals@bin_op__mul_int.panda.snap  pandalang__eval__tests__evals@bin_op__prec1.panda.snap  pandalang__eval__tests__evals@bin_op__prec2.panda.snap  pandalang__eval__tests__evals@bin_op__prec3.panda.snap  pandalang__eval__tests__evals@bin_op__prec4.panda.snap  pandalang__eval__tests__evals@bin_op__sub_int.panda.snap  pandalang__eval__tests__evals@div_int.panda.snap  pandalang__eval__tests__evals@fun__apply_body.panda.snap  pandalang__eval__tests__evals@fun__id.panda.snap  pandalang__eval__tests__evals@fun__nested.panda.snap  (+157 more)
crates/playground/: Cargo.toml
crates/playground/src/: console.rs  lib.rs
playground/: index.html  (+3 more)
(+335 files in other folders)
