[package]
name = "pandalang"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
lalrpop-util = { version = "0.19.8", features = [ "lexer" ] }
recursion = "0.3.3"
regex = "1"
rustyline = "10.0.0"

[dev-dependencies]
insta = { version = "1.21.0", features = ["yaml", "glob"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
