[package]
name = "pandalang"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
lalrpop-util = { version = "0.20.0", features = [ "lexer" ] }
lazy_static = "1.4.0"
regex = "1"
rustyline = "10.0.0"

[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml", "glob"] }
