[package]
name = "pandalang-playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
pandalang-parser = { path = "../parser" }
pandalang-types = { path = "../types" }
pandalang-eval = { path = "../eval" }

# TODO: work around https://github.com/rustwasm/wasm-pack/issues/864
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
